--- a/itreporting/templates/itreporting/base.html
+++ b/itreporting/templates/itreporting/base.html
@@ -32,11 +32,20 @@
                             <a class="nav-item nav-link" href="#">Report</a>
                             <a class="nav-item nav-link" href="{% url 'itreporting-contact' %}">Contact</a>
                         </div>
-                        <!-- Navbar Right Side -->
                         <div class="navbar-nav">
+                            {% if user.is_authenticated %}
+                             <a class="nav-item nav-link" href="{% url 'logout' %}">Logout</a>
+                             <a class="nav-item nav-link" href="{% url 'profile' %}">Profile</a>
+                            {% else %}
+                             <a class="nav-item nav-link" href="{% url 'login' %}">Login</a>
+                             <a class="nav-item nav-link" href="{% url 'register'%}">Register</a>
+                            {% endif %}
+                        </div>
+                        <!-- Navbar Right Side -->
+                        <!--<div class="navbar-nav">
                             <a class="nav-item nav-link" href="#">Login</a>
                             <a class="nav-item nav-link" href="#">Register</a>
-                        </div>
+                        </div>-->
                     </div>
                 </div>
             </nav>
